@@ -8,7 +8,7 @@ BEGIN { require "$FindBin::Bin/test-helper-s3-client.pl" }
 
 use Shared::Examples::Net::Amazon::S3::Client qw[ expect_client_object_fetch ];
 
-plan tests => 6;
+plan tests => 7;
 
 expect_client_object_fetch 'fetch existing object' => (
 	with_bucket             => 'some-bucket',
@@ -23,6 +23,26 @@ expect_client_object_fetch 'fetch existing object' => (
 		date                => 'Fri, 09 Sep 2011 23:36:00 GMT',
 	},
 	expect_request          => { GET => 'https://some-bucket.s3.amazonaws.com/some-key' },
+	expect_data             => 'some-value',
+);
+
+expect_client_object_fetch 'fetch range of existing object' => (
+	with_bucket             => 'some-bucket',
+	with_key                => 'some-key',
+	with_range              => 'bytes=1024-10240',
+	with_response_code      => HTTP::Status::HTTP_OK,
+	with_response_data      => 'some-value',
+	with_response_headers   => {
+		content_length      => 10,
+		content_type        => 'text/plain',
+		etag                => '8c561147ab3ce19bb8e73db4a47cc6ac',
+		x_amz_metadata_foo  => 'foo-1',
+		date                => 'Fri, 09 Sep 2011 23:36:00 GMT',
+	},
+	expect_request          => { GET => 'https://some-bucket.s3.amazonaws.com/some-key' },
+	expect_request_headers  => {
+		range               => 'bytes=1024-10240',
+	},
 	expect_data             => 'some-value',
 );
 
